--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-10 mx-auto outline">
+                <div class=" col-md-8 mx-auto outline">
                     <div class="pic" style="border: none;">
                         <img src="assets/imgs/work-min.jpg" alt="">
                     </div>
